# dmt-indexer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: dump_db.rs  probe_envelope.rs  set_next_event_id.rs  table_audit.rs
src/: config.rs  error.rs  lib.rs  main.rs  verify.rs
src/api/: activity.rs  cache.rs  cursor.rs  export.rs  holders.rs  inscriptions.rs  mod.rs  ratelimit.rs  state.rs  status.rs  wallets.rs  web.rs  ws.rs
src/api/web/: index.html
src/btc/: block.rs  mod.rs  rpc.rs
src/crypto/: ecdsa_recover.rs  mod.rs
src/inscription/: envelope.rs  mod.rs  tracker.rs
src/ledger/: auth.rs  coinbase.rs  control.rs  deploy.rs  event.rs  mint.rs  mod.rs  primitives.rs  send.rs  transfer.rs
src/protocol/: address.rs  amount.rs  auth.rs  bits.rs  control.rs  deploy.rs  element.rs  envelope.rs  mint.rs  mod.rs  privilege.rs  send.rs  tap.rs  ticker.rs  token.rs  trade.rs  transfer.rs
src/store/: codec.rs  mod.rs  tables.rs
src/sync/: mod.rs  reorg.rs  scan.rs
tests/: store_open.rs
